opam-version: "2.0"
maintainer: "Hannes Mehnert <hannes@mehnert.org>"
authors: ["Hannes Mehnert <hannes@mehnert.org>"]
homepage: "https://github.com/hannesm/patch"
doc: "https://hannesm.github.io/patch/"
dev-repo: "git+https://github.com/hannesm/patch.git"
bug-reports: "https://github.com/hannesm/patch/issues"
license: "ISC"

depends: [
  "ocaml" {>= "4.04.2"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "Patch library purely in OCaml"
description: """
A pure OCaml implementation for patching.
"""
