opam-version: "2.0"
version: "3.0.0"
maintainer: "Hannes Mehnert <hannes@mehnert.org>"
authors: [
  "Hannes Mehnert <hannes@mehnert.org>"
  "Kate <kit-ty-kate@exn.st>"
]
homepage: "https://github.com/hannesm/patch"
doc: "https://hannesm.github.io/patch/"
dev-repo: "git+https://github.com/hannesm/patch.git"
bug-reports: "https://github.com/hannesm/patch/issues"
license: "ISC"

depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "3.0"}
  "alcotest" {with-test & >= "1.7.0"}
  "crowbar" {with-test}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "Patch library purely in OCaml"
description: """
This is a library which parses unified diff and git diff output, and can
apply a patch in memory.
"""
x-maintenance-intent: [ "(latest)" ]
